--- a/mainmenu.css
+++ b/mainmenu.css
@@ -1,4 +1,14 @@
-
+/* Variable definitions
+-----------------------
+<Group description="Main Hover Color" selector="body">
+<Variable name="maincolor" description="Primary Color" type="color" default="#1976D2"  value="#1976D2"/>
+</Group>
+<Group description="Footer Color" selector="body">
+<Variable name="footercolor" description="Bottom Footer Color" type="color" default="#1976D2"  value="#1976D2"/>
+</Group>
+/*****************************************
+reset.css
+******************************************/
 html, body, .section, .widget, div, span, applet, object, iframe,
 h1, h2, h3, h4, h5, h6, p, blockquote, pre,
 a, abbr, acronym, address, big, cite, code,
